Imagen noticias rel

--- a/CSS/principal.css
+++ b/CSS/principal.css
@@ -301,3 +301,6 @@ div.clear {
     transform: translate(-50%, -50%);
     -ms-transform: translate(-50%, -50%);
 }
+figure img{
+    width:100%;
+}
