Funciones de JavaScript añadidas

--- a/CSS/principal.css
+++ b/CSS/principal.css
@@ -321,3 +321,15 @@ figcaption {
 article h1 {
     text-align:center;
 }
+.content h1 {
+    padding:2%;
+    font-family:monospace;
+    font-size:30px;
+}
+.content h2 {
+    margin-top:3%;
+}
+ol {
+    margin-left:3%;
+}
+
